<resources>
    <!--    Main    -->
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="music">Медиатека</string>

    <!--    Settings activity-->

    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="url_android_dev">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_email">Uzzbagoyzza@yandex.ru</string>
    <string name="support_theme_massage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_massage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh_but">Обновить</string>
    <string name="ph_no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="ph_not_found">Ничего не нашлось</string>
    <string name="search_title">Вы искали</string>
    <string name="clear_history_butt">Очистить историю</string>
    <string name="track_time_title">Длительность</string>
    <string name="collection_name_title">Альбом</string>
    <string name="release_date_title">Год</string>
    <string name="primary_genre_title">Жанр</string>
    <string name="country_title">Страна</string>
    <string name="default_play_time">00:00</string>

    <!--    media_library-->
    <string name="media_library_title">Медиатека</string>
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="ph_no1_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="media_library_clear">Ваша медиатека пуста</string>
    <string name="favourites_track_title">Избранные треки</string>
    <string name="playlists_title">Плейлисты</string>
    <string name="title_activity_root">PlaylistMaker</string>
    <string name="tb_new_playlist_title">Новый плейлист</string>
    <string name="et_new_playlist_name">Название*</string>
    <string name="et_new_playlist_description">Описание</string>
    <string name="btn_new_playlist_create">Создать</string>
    <string name="unsaved_data_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish_create_playlist">Завершить создание плейлиста?</string>
    <string name="add_new_playlist_massage">"Плейлист %1$s создан"</string>
    <string name="edit_playlist_massage">"Плейлист %1$s сохранен"</string>
    <string name="playlist_is_already">"Плейлист с названием %1$s уже создан.\nВведите другое название."</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_track_to_playlist">"Добавлено в плейлист %1$s."</string>
    <string name="track_is_already_in_playlist">"Трек уже добавлен в плейлист %1$s."</string>
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="delete">Удалить</string>
    <string name="delete_track">Удалить трек</string>
    <string name="u_sure_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="empty_track_list">В этом плейлисте нет списка треков,которым можно поделиться.</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="u_sure_delete_playlist">Хотите удалить плейлист?</string>
    <string name="editor">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="finish_update_playlist">Завершить редактирование?</string>
    <string name="no_track_in_playlist">В плейлисте нет треков.</string>
    Добавить в плейлист
    <plurals name="tracks_hint">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>