<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <TextView style="@style/MenuTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_to_main"
        android:minHeight="60dp"
        android:text = "@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_theme_switch"
        style="@style/SwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/dark_theme" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/share_app_butt"
        style="@style/MenuItemsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share" />

    <TextView
        android:id="@+id/support_butt"
        style="@style/MenuItemsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/user_agreement_butt"
        style="@style/MenuItemsStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />

</LinearLayout>