<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textSize="@dimen/main_text_size"/>

    </LinearLayout>
    
    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_size_of_points"
        android:textColor="@color/black"
        android:gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/ic_share"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_of_points"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/write_to_support"
        app:drawableEndCompat="@drawable/ic_support"
        app:drawableTint="@color/ic_points"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_of_points"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_of_points"
        android:paddingHorizontal="@dimen/gen_indent"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_size_of_points"
        android:textColor="@color/black"/>

</LinearLayout>