<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/gen_indent"
    android:background="@color/main_blue"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gen_indent"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/gen_indent"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_ic_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/main_butt_radius"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/main_text_size"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/button_media_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/gen_indent"
        app:icon="@drawable/ic_music"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_ic_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/main_butt_radius"
        android:text="@string/music"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/main_text_size"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"/>
    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/gen_indent"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_ic_padding"
        app:iconTint="@color/black"
        app:cornerRadius="@dimen/main_butt_radius"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textSize="@dimen/main_text_size"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>

</LinearLayout>