<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView style="@style/MenuTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:text = "@string/search" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/gen_indent"
        android:layout_marginBottom="@dimen/padding_to_main"
        android:background="@drawable/layout_bg_search"
        android:orientation="horizontal"
        android:padding="@dimen/padding_search_frame">

        <ImageView
            style="@style/SearchIcStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="@dimen/padding_search_string"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/inputEditText"
            style="@style/SearchTextEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/SearchIcStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="@dimen/padding_search_string"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/history_title"
                    style="@style/SearchTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_title"
                    android:text="@string/search_title"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trackSearchRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_history_butt"
                    style="@style/RefreshButtPH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_to_main"
                    android:minHeight="36dp"
                    android:text="@string/clear_history_butt"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/error_ph"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/error_ic_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/place_holder_marginTop"
                android:src="@drawable/ic_no_connection" />

            <TextView
                android:id="@+id/error_text_ph"
                style="@style/ErrorTextPH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_to_main"
                android:text="@string/ph_no_connection" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refresh_butt"
                style="@style/RefreshButtPH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh_but"
                android:visibility="gone" />
        </LinearLayout>

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_marginTop="@dimen/place_holder_marginTop"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/main_blue"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>