<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_player" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_player" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_title" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/height_of_points"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow" />

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_player"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/toolbar_id" />

        <TextView
            android:id="@+id/trackNameText"
            style="@style/PlayerTextTrackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_player"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/artwork"
            tools:text="Название трека" />

        <TextView
            android:id="@+id/artistNameText"
            style="@style/PlayerTextArtistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_player"
            app:layout_constraintEnd_toStartOf="@+id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackNameText"
            tools:text="Имя Артиста" />

        <ImageView
            android:id="@+id/add_to_playlist_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_to_playlist"
            app:layout_constraintBottom_toBottomOf="@id/play_btn"
            app:layout_constraintEnd_toStartOf="@id/play_btn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@+id/play_btn" />

        <ImageView
            android:id="@+id/play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_player_butt"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toStartOf="@id/favorites_butt"
            app:layout_constraintStart_toEndOf="@id/add_to_playlist_butt"
            app:layout_constraintTop_toBottomOf="@id/artistNameText" />

        <ImageView
            android:id="@+id/favorites_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_favourites"

            app:layout_constraintBottom_toBottomOf="@+id/play_btn"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/play_btn"
            app:layout_constraintTop_toTopOf="@+id/play_btn" />

        <TextView
            android:id="@+id/play_time"
            style="@style/PlayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin_player"
            android:text="@string/default_play_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play_btn" />

        <TextView
            android:id="@+id/trackTimeTitle"
            style="@style/PlayerInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_player_butt_to_text"
            android:text="@string/track_time_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play_time" />

        <TextView
            android:id="@+id/collectionNameTitle"
            style="@style/PlayerInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackTimeTitle" />

        <TextView
            android:id="@+id/releaseDateTitle"
            style="@style/PlayerInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collectionNameTitle" />

        <TextView
            android:id="@+id/primaryGenreTitle"
            style="@style/PlayerInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_genre_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/releaseDateTitle" />

        <TextView
            android:id="@+id/countryTitle"
            style="@style/PlayerInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreTitle" />

        <TextView
            android:id="@+id/trackTime"
            style="@style/PlayerInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_player_butt_to_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/trackTimeTitle"
            app:layout_constraintTop_toBottomOf="@id/play_time"
            tools:text="45:22" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/PlayerInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/collectionNameTitle"
            app:layout_constraintTop_toBottomOf="@id/trackTime"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/PlayerInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/releaseDateTitle"
            app:layout_constraintTop_toBottomOf="@id/collectionName"
            tools:text="1969" />

        <TextView
            android:id="@+id/primaryGenre"
            style="@style/PlayerInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/primaryGenreTitle"
            app:layout_constraintTop_toBottomOf="@id/releaseDate"
            tools:text="Rock" />

        <TextView
            android:id="@+id/country"
            style="@style/PlayerInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/bottomBorder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/countryTitle"
            app:layout_constraintTop_toBottomOf="@id/primaryGenre"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>